--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^12.4.0",
     "framer-motion": "^12.23.16",
     "input-otp": "^1.4.2",
     "jspdf": "^3.0.3",
